<resources>
    <string name="app_name">InventoryAPP</string>
    <string name="empty_listview_mainscreen">Insert some product to view list</string>
    <string name="add_product_title">Add Product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="add_product_photo">Update Photo</string>
    <string name="set_product_sales">Set Product Sales</string>
    <string name="set_inventory">Set Inventory</string>
    <string name="set_product_price">Set Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="hint_product_name">Type product name here</string>
    <string name="product_description">Product Description</string>
    <string name="hint_product_description">Type product description here</string>
    <string name="product_price">Product price</string>
    <string name="hint_product_price">Type product price here</string>
    <string name="inventory">Inventory</string>
    <string name="hint_inventory">Type number of items in inventory</string>
    <string name="product_sold">Product Sold</string>
    <string name="hint_product_sold">Type number of product sold</string>
    <string name="update">Update</string>
    <string name="save_product_label">Save Product</string>
    <string name="update_product_label">Update product</string>
    <string name="discard">Discard and leave</string>
    <string name="keep_editing">Keep editing</string>
    <string name="editor_delete_product_failed">There was a problem deleting a product.</string>
    <string name="editor_delete_product_successful">Deleted successfully</string>
    <string name="delete_dialog_msg">Are you sure you want to delete the product?</string>
    <string name="delete">Delete</string>
    <string name="bad_uri">"Insertion is not supported for "</string>
    <string name="err_external_storage_permissions">Need permissions to get a product photo</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all Data</string>
    <string name="click_photo_to_update">Click Photo to update</string>
    <string name="error_missing_textfields">All fields required</string>
    <string name="error_inserting_product">Error occurred while inserting your product, please try again.</string>
    <string name="update_successful">"Record updated successfully!"</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved information are you sure you want to go back?</string>
    <string name="cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="delete_product">Delete product</string>
    <string name="change_picture">Click on a picture to change it</string>
    <string name="supplier">Supplier</string>
    <string name="hint_supplier">Add a supplier</string>
    <string name="order_more">Order more!</string>

</resources>
