<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_product_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change_picture"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/item_name_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_name"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/product_description"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/item_description_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_description"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/product_price"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/item_price_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_price"
            android:inputType="number"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier"
            android:paddingTop="10dp"
            android:textColor="#000"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/supplier_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_supplier"
            android:inputType="number"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/inventory"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/item_quantity_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_inventory"
            android:inputType="number"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/product_sold"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/current_sales_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_sold"
            android:inputType="number"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/update_save_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_product_label"
                android:textColor="#000" />

            <TextView
                android:id="@+id/delete_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delete_product"
                android:textColor="#000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/save_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_save_change" />

            <ImageButton
                android:id="@+id/delete_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_delete_product" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_more_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_more"
                android:textColor="#000"
                android:layout_margin="10dp"/>

            <ImageButton
                android:id="@+id/order_more_button"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:src="@drawable/order_more"
               />


        </LinearLayout>
    </LinearLayout>

</ScrollView>